big rewrite of the mm-phc boundary

--- a/conclusion.tex
+++ b/conclusion.tex
@@ -35,8 +35,10 @@
 %% NOTES: What WAS NOT discussed in the thesis -- Things that could be pursued further on the basis of the presented work:
 %% * quasicrystals and disorder, 
 %  * plasmonic nanoparticles (and related MMs at optical frequencies?)
-%% * chiral media, bianisotropy and gyrotropy, 
+%% * chiral media, bianisotropy
 %			Further, also the effects of more general properties of the constituent materials could be investigated, but this would require expanding the source code of the FDTD simulation library used (i.e., MEEP). While anisotropy and optical activity would be welcome, the particularly interesting option is gyrotropy, i.e. non-hermitian form of the permittivity or permeability tensors  that breaks time-reversal symmetry. This would open the wide research possibilies of non-reciprocal metamaterial devices.
+%% * temporal symmetry breaking, 
+%% * two-dimensional structures - metasurfaces
 %% * structures with nonlinearity or loss,    
 %% * tunable structures:		Where appropriate, we also investigated?? how this behaviour depends on some external parameter (such as electric field, temperature or illumination) -- in other words, how the \textit{tunability} of the structure can be achieved. 
 
