--- a/fdphd.bib
+++ b/fdphd.bib
@@ -941,6 +941,9 @@ j%% TODO understand what this is about
   year={1997},
   publisher={IOP Publishing}
 }
+%	scanning the a/λ ratio of SRR array, "medium progressively becomes less homogenizable", 
+%	discuss the possibility of effparam  when λ~3a, "Bragg scattering ... becomes the dominant"
+%	changing resonance freq -> crossing of indiv/bragg resonances
 @article{chakrabarti2012magnetic,
   title={Magnetic response of split ring resonator metamaterials: From effective medium dispersion to photonic band gaps},
   author={Chakrabarti, Sangeeta and Ramakrishna, S Anantha},
