--- a/t.tex
+++ b/t.tex
@@ -4,7 +4,7 @@
 \usepackage{mathrsfs} 
 \usepackage{palatino} 
 \usepackage[font=it]{caption}
-\usepackage{graphicx,amsmath,amssymb,rotating,booktabs,color,enumitem, tikz}
+\usepackage{graphicx,amsmath,amssymb,rotating,booktabs,color,enumitem, tikz, csquotes}
 \usetikzlibrary{positioning, arrows}
 \usepackage{upgreek}
 
@@ -48,18 +48,18 @@
 \chapter{Numerical methods}
 \input{numeric.tex}
 
-% \chapter{Experimental methods}
-% \input{expe.tex}
-% 
-% \chapter{Results}
-% \input{result.tex}
-% 
-% \chapter{Conclusion}
-% % \input{conclusion.tex}
-% \label{endtext} 
-% 
-% \chapter{Appendices}
-%  \input{appendices.tex}
+\chapter{Experimental methods}
+\input{expe.tex}
+
+\chapter{Results}
+\input{result.tex}
+
+\chapter{Conclusion}
+% \input{conclusion.tex}
+\label{endtext} 
+
+\chapter{Appendices}
+ \input{appendices.tex}
 
 \chapter*{List of own publications}
 %\input{fd_publications.tex} % TODO
