--- a/theory.tex
+++ b/theory.tex
@@ -1270,12 +1270,8 @@ or %todo
 
 %}}}
 \paragraph{Theoretical investigation of the structures on the MM-PhC boundary}%{{{
-Probably it were the miniaturisation issues that incited the studies of the interplay between the individual and Bragg-type resonances, the former being typical for metamaterials, the latter for photonic crystals. Typically, one either scans the relative cell spacing (this can be done in simulations \cite{shi2007} as well as in experiments \cite{rybin2015}),  % and \cite{antonoyiannakis1997mie}?
+Probably it were the miniaturisation issues that incited the studies of the interplay between the individual and Bragg-type resonances, the former being typical for metamaterials, the latter for photonic crystals. Typically, one either scans the relative cell spacing (this can be done in simulations \cite{shi2007, dominec2014transition} as well as in experiments \cite{rybin2015}),  % and \cite{antonoyiannakis1997mie}?
 or tunes the individual resonance frequency keeping the lattice unchanged (e.g. \cite{chakrabarti2012magnetic}). The frequency of the individual and Bragg resonances have different sensitivity to these parameters, and can thus be identified in the spectra. Such a study of a typical structure, the array of dielectric rods, is elaborated in the Results section of this thesis.
-%Chakrabarti2001_From_effective_response_to_PBG.pdf
-%	scanning the a/λ ratio of SRR array, "medium progressively becomes less homogenizable", 
-%	discuss the possibility of effparam  when λ~3a, "Bragg scattering ... becomes the dominant"
-%	changing resonance freq -> crossing of indiv/bragg resonances
 
 %PhCs with metallic/metamaterial inclusions
 %Antonnoyiannakis1997-Mie_resonances_and_bonding_in_PhC.pdf
@@ -1333,10 +1329,13 @@ In the analogy, the earlier metamaterials (or, artificial dielectrics) were most
 \paragraph{The energy criterion} %{{{
 The time-averaged energy of a plane wave in vacuum is constant.  All peculiar interaction of MMs and PhCs with the wave is inherently connected to the uneven distribution of the electromagnetic energy in the structure. This is the rationale for the new criterion: In the MMs near a resonance, the energy is highly concentrated inside a part of the unit cell, typically close to sharp edges of metals or within a particle of high-permittivity dielectric. On the contrary, the resonances in typical PhCs do not concentrate the energy, and instead there is a moderately high intensity of the field in the majority of the space between the scattering structure elements.
 
-As a result, the individual, MM-like resonances are more sensitive to changes in the structure shaping, whereas the Bragg band gaps typical of a PhC are more sensitive to the unit-cell spacing. This is the reason behind the aforementioned parametric scans through the unit cell spacing, % (todo add refs from AdMonsoriu ...)
+As a result, the individual, MM-like resonances are more sensitive to changes in the structure shaping, whereas the Bragg band gaps typical of a PhC are more sensitive to the unit-cell spacing. This is the reason behind the aforementioned parametric scans \cite{shi2007,rybin2015,dominec2014transition} through the unit cell spacing, % (todo add refs from AdMonsoriu ...)
 since they recognize the nature of each single resonance mode, and justify even the problematic structures at the boundary to be viewed either as a MM or a PhC in different parts of the spectra.
 
-The high concentration of the energy within a small part of the structure reduces the sensitivity of the parameters under a moderate disorder in the cell position, which has also been viewed as a trait of metamaterials: % TODO quote and cite Peng
+The high concentration of the energy within a small part of the structure reduces the sensitivity of the parameters under a moderate disorder in the cell position, which has also been viewed as a trait of metamaterials, \cite{peng2007}: 
+\begin{displayquote}
+the randomized positions do not influence significantly the left-handed properties indicates that such composite is different from (...) photonic crystals
+\end{displayquote}
 
 %}}}
 \paragraph{The phase criterion} %{{{
@@ -1374,21 +1373,20 @@ This also justifies denoting MMs and PhCs as two different \textit{paradigms} ra
 With this criterion, the author believes, there is no strict rule for classification. Some structures are only more useful to be subject to homogenization, and with some other it is more interesting to focus on their band and band-gap structure. 
 An important question arises as to what extent the homogenization is applicable, and when its theory can fail. The basic answers are sketched in the following section.
 
-
-
-
-
 %   The \textit{For Beginners} page of the ECONAM project states
 %   \textit{Metamaterial is an arrangement of artificial structural elements, designed to achieve advantageous and unusual electromagnetic properties}
-
-% whatis.com (http://whatis.techtarget.com/definition/metamaterial):
-% {\quote A metamaterial is a (\ldots) substance whose properties depend on its inter-atomic structure rather than on the composition of atoms themselves.}
-% and this continues with description of neg refr as the typical application
-
-%   Duke university (http://metamaterials.duke.edu/research/metamaterials):
-%   {\quote MMs are artificially structured materials used to control light, sound and many other physical phenomena. The properties of metamaterials are derived from the inherent properties of their constituent materials, as well as from the geometrical arrangement of these (\ldots)}
-% further they stress the importance of homogenization
-% "it is difficult to arrive to a strict and unambiguous definition"
+%   whatis.com (http://whatis.techtarget.com/definition/metamaterial):
+%  \begin{displayquote}
+%  A metamaterial is a (\ldots) substance whose properties depend on its inter-atomic structure rather than on the composition of atoms themselves.
+%  \end{displayquote}
+%  %and this continues with description of neg refr as the typical application
+%  
+%  Duke university (http://metamaterials.duke.edu/research/metamaterials):
+%  \begin{displayquote}
+%  MMs are artificially structured materials used to control light, sound and many other physical phenomena. The properties of metamaterials are derived from the inherent properties of their constituent materials, as well as from the geometrical arrangement of these (\ldots)}
+%  \end{displayquote}
+ %further they stress the importance of homogenization
+ %"it is difficult to arrive to a strict and unambiguous definition"
 
 % \cite{sihvola2009metamaterials}
 
