--- a/appendices.tex
+++ b/appendices.tex
@@ -44,7 +44,7 @@ PBG		& Photonic band-gap\\
 PhC 		& Photonic crystal\\
 PML 		& Perfectly matched layers (absorber in simulation)\\
 PWEM 		& Plane-wave expansion method (algorithm)\\
-RHM'		& Right-Handed Material\\ %% TODO used anywhere?
+RHM 		& Right-Handed Material\\ %% TODO used anywhere?
 STO		& Strontium titanate, SrTiO$_3$ (ferroelectric material)\\
 SRR		& Split-ring resonator\\
 TDTS 		& Time-domain terahertz spectroscopy\\
