--- a/theory.tex
+++ b/theory.tex
@@ -1373,6 +1373,9 @@ This also justifies denoting MMs and PhCs as two different \textit{paradigms} ra
 With this criterion, the author believes, there is no strict rule for classification. Some structures are only more useful to be subject to homogenization, and with some other it is more interesting to focus on their band and band-gap structure. 
 An important question arises as to what extent the homogenization is applicable, and when its theory can fail. The basic answers are sketched in the following section.
 
+%todo read Sihvola2009-MM_a_personal_view.pdf
+%todo read Sihvola-emergence_in_mms.pdf
+
 %   The \textit{For Beginners} page of the ECONAM project states
 %   \textit{Metamaterial is an arrangement of artificial structural elements, designed to achieve advantageous and unusual electromagnetic properties}
 %   whatis.com (http://whatis.techtarget.com/definition/metamaterial):
